add roles endpoints + media name + openapi update
